turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_attribute_invalid_args_inherent_impl.stderr
error: unexpected token, expected one of: "fs", "network", "operation", "local"
  --> tests/function/fail_attribute_invalid_args_inherent_impl.rs:15:29
   |
15 |     #[turbo_tasks::function(invalid_argument)]
   |                             ^^^^^^^^^^^^^^^^
